<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operation"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/bSetLighting"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_set_lighting"
        android:textColor="@color/bianco"/>

    <Button
        android:id="@+id/bOpenDoors"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_open_doors"
        android:textColor="@color/bianco"/>

    <Button
        android:id="@+id/bWaterMeter"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_water_meter"
        android:textColor="@color/bianco"/>

    <Button
        android:id="@+id/bGasMeter"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_gas_meter"
        android:textColor="@color/bianco"/>

    <Button
        android:id="@+id/bElectricityMeter"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_electricity_meter"
        android:textColor="@color/bianco"/>

    <Button
        android:id="@+id/bAllMeters"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_all_meters"
        android:textColor="@color/bianco"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/textGrey"/>

    <TextView
        android:id="@+id/tTestResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Results"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_red_dark" />

</LinearLayout>